# MacroPad

./: .gitmodules  CMakeLists.txt  README.md  pico_sdk_import.cmake
macro_pad/: CMakeLists.txt  MacroPad.cpp  main.cpp
